[package]
name = "retro-homepage"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
libc = "0.2"
